# resto-recommendation-engine

./: AGENTS.md  Project Specifications.md  README.md  app.json  package-lock.json  package.json
api/: client.ts  schema.ts
app/: _layout.tsx  sign-in.tsx
app/(tabs)/: _layout.tsx  index.tsx  journal.tsx  profile.tsx  reco.tsx  review.tsx
app/views/: sign_in.tsx
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/backend/: __init__.py  main.py
components/ui/: icon-symbol.tsx
services/: auth_manager.ts
supabase/: README.md  config.toml
utils/: supabase.ts
