[project]
name = "kilo-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for Kilo with OpenAPI schema for typed TS client."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.7.0",
]

[tool.uv]
dev-dependencies = [
  "mypy",
  "ruff",
]
